<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="#FFFFFF"
    android:padding="8dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TIL1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TIL2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TIL1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPlatform"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/platform" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TIL3"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TIL2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/day"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TIL4"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        app:layout_constraintStart_toEndOf="@+id/TIL3"
        app:layout_constraintTop_toBottomOf="@+id/TIL2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etMonth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/month"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TIL5"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        app:layout_constraintStart_toEndOf="@+id/TIL4"
        app:layout_constraintTop_toBottomOf="@+id/TIL2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/year"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
